5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1716_2496.log
== TEST (2019-05-07 16:28:49) 
-- CODE:
a = int(input())

while (x <= 5):
	x = x +1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (x <= 5):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:28:58) 
-- CODE:
a = int(input())

while (x <= 5):
	x = x +1
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (x <= 5):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:16) 
-- CODE:
a = int(input())

while (x <= 5):
	x = x +1
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while (x <= 5):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:31) 
-- CODE:
x = int(input())

while (x <= 5):
	x = x +1
	print(x)

-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:29:48) 
-- CODE:
x = int(input())

while (x <= 5):
	x = x +1
	print(x)

-- EXECUTION TIME:
0.168031
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
2
3
4
5
6
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:52) 
-- CODE:
x = int(input())

while (x <= 5):
	x = x +1
	print(x)

-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:30:21) 
-- CODE:
x = int(input())

while (x <= 5):
	x = x +1
	print(x)

-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:30:48) 
-- CODE:
x = int(input())

while (x <= 5):
	print(x)
	x = x +1
	

-- OUTPUT:
-525
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:30:52) 
-- CODE:
x = int(input())

while (x <= 5):
	print(x)
	x = x +1
	

-- EXECUTION TIME:
0.159812
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
1
2
3
4
5
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:47:32) 
-- CODE:
x = int(input())

x + 1 = 0
while (x == -1):
	print(x)
-- ERROR:
File "XXXX", line 3
    x + 1 = 0
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:09:09) 
-- CODE:
x = int(input())
a = 0
while (x != -1):
	a = a + x
	x = int(input())
	print(a)
-- EXECUTION TIME:
0.194912
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:09:22) 
-- CODE:
x = int(input())
a = 0
while (x != -1):
	a = a + x
	x = int(input())
	print(a)
-- EXECUTION TIME:
0.14536
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:09:40) 
-- CODE:
x = int(input())
a = 0
while (x != -1):
	a = a + x
	x = int(input())
print(a)
-- EXECUTION TIME:
0.178457
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
